Added FTS interface for Force-Torque-Control

--- a/kuka_rsi_hw_interface/CMakeLists.txt
+++ b/kuka_rsi_hw_interface/CMakeLists.txt
@@ -11,6 +11,9 @@ find_package(catkin REQUIRED COMPONENTS
   realtime_tools
   roscpp
   std_msgs
+  ati_force_torque
+  force_controllers
+  kdl_parser
 )
 
 find_package(Boost REQUIRED COMPONENTS system)
@@ -28,6 +31,8 @@ catkin_package(
     joint_limits_interface
     roscpp
     std_msgs
+    ati_force_torque
+    force_controllers
   DEPENDS
     TinyXML
 )
@@ -42,12 +47,22 @@ include_directories(
 
 add_library(kuka_hardware_interface
   src/kuka_hardware_interface.cpp
+#   src/kuka_hardware_interface_with_fts.cpp
+)
+add_library(kuka_hardware_interface_with_fts
+  src/kuka_hardware_interface_with_fts.cpp
 )
 
 target_link_libraries(kuka_hardware_interface
   ${catkin_LIBRARIES}
   ${Boost_LIBRARIES}
   ${TinyXML_LIBRARIES}
+)
+target_link_libraries(kuka_hardware_interface_with_fts
+  ${catkin_LIBRARIES}
+  ${Boost_LIBRARIES}
+  ${TinyXML_LIBRARIES}
+  kuka_hardware_interface
 )
 
 add_executable(kuka_hardware_interface_node
@@ -56,11 +71,14 @@ add_executable(kuka_hardware_interface_node
 
 target_link_libraries(kuka_hardware_interface_node
   kuka_hardware_interface
+  kuka_hardware_interface_with_fts
 )
+
 
 install(
   TARGETS
     kuka_hardware_interface
+    kuka_hardware_interface_with_fts
     kuka_hardware_interface_node
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
