--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ notifications:
     on_failure: always
 
 env:
+  global:
+    - UPSTREAM_WORKSPACE=file
   matrix:
     - USE_DEB=true
       ROS_DISTRO="indigo"
@@ -17,6 +19,7 @@ env:
     - USE_DEB=true
       ROS_DISTRO="indigo"
       ROS_REPOSITORY_PATH=http://packages.ros.org/ros-shadow-fixed/ubuntu
+    - ROS_DISTRO="kinetic" ROS_REPOSITORY_PATH=http://packages.ros.org/ros/ubuntu
 
 install:
   - git clone https://github.com/ros-industrial/industrial_ci.git .ci_config
