updated read and write functions, added plugin export

--- a/kuka_rsi_hw_interface/CMakeLists.txt
+++ b/kuka_rsi_hw_interface/CMakeLists.txt
@@ -67,3 +67,6 @@ install(
 install(
   TARGETS kuka_hardware_interface_node
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
+
+install(FILES kuka_hardware_interface_plugin.xml
+	DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
